--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,3 @@
-/* roboto-regular - latin_cyrillic */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/roboto-v20-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
-  src: local(''), url('../fonts/roboto-v20-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../fonts/roboto-v20-latin_cyrillic-regular.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-regular.woff') format('woff'),
-    /* Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-regular.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../fonts/roboto-v20-latin_cyrillic-regular.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-500 - latin_cyrillic */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/roboto-v20-latin_cyrillic-500.eot'); /* IE9 Compat Modes */
-  src: local(''), url('../fonts/roboto-v20-latin_cyrillic-500.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../fonts/roboto-v20-latin_cyrillic-500.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-500.woff') format('woff'),
-    /* Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-500.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../fonts/roboto-v20-latin_cyrillic-500.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-700 - latin_cyrillic */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/roboto-v20-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
-  src: local(''), url('../fonts/roboto-v20-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../fonts/roboto-v20-latin_cyrillic-700.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-700.woff') format('woff'),
-    /* Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-700.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../fonts/roboto-v20-latin_cyrillic-700.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* roboto-900 - latin_cyrillic */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 900;
-  src: url('../fonts/roboto-v20-latin_cyrillic-900.eot'); /* IE9 Compat Modes */
-  src: local(''), url('../fonts/roboto-v20-latin_cyrillic-900.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../fonts/roboto-v20-latin_cyrillic-900.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-900.woff') format('woff'),
-    /* Modern Browsers */ url('../fonts/roboto-v20-latin_cyrillic-900.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../fonts/roboto-v20-latin_cyrillic-900.svg#Roboto') format('svg'); /* Legacy iOS */
-}
-/* raleway-700 - latin_cyrillic */
-@font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../fonts/raleway-v19-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
-  src: local(''), url('../fonts/raleway-v19-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('../fonts/raleway-v19-latin_cyrillic-700.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../fonts/raleway-v19-latin_cyrillic-700.woff') format('woff'),
-    /* Modern Browsers */ url('../fonts/raleway-v19-latin_cyrillic-700.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('../fonts/raleway-v19-latin_cyrillic-700.svg#Raleway') format('svg'); /* Legacy iOS */
-}
 :root {
   --accent-color: #2196f3;
   --title-text-color: #212121;
@@ -65,6 +5,8 @@
   --logo-header: #000000;
   --logo-footer: #ffffff;
   --primary-white-color: #ffffff;
+  --dark-bg-c: #2f303a;
+  --filter-btn-c: #f5f4fa;
 }
 body {
   font-family: 'Roboto', sans-serif;
@@ -75,8 +17,14 @@ body {
   color: var(--title-text-color);
   letter-spacing: 0.03em;
 }
+a {
+  text-decoration: none;
+}
 button {
   cursor: pointer;
+}
+address {
+  font-style: normal;
 }
 .list {
   list-style: none;
@@ -87,11 +35,42 @@ button {
 .header-contacts a {
   color: #757575;
 }
-.features p{
-   color: var(--primary-text-color);
+.hero {
+  background-color: var(--dark-bg-c);
+}
+.hero-title {
+  color: var(--primary-white-color);
+  text-transform: uppercase;
+  font-size: 44px;
+  line-height: 60px;
+}
+.order-btn {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+}
+.filter-btn {
+  background-color: var(--filter-btn-c);
+}
+.filter-btn:hover,
+.filter-btn:focus {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+}
+.features p {
+  color: var(--primary-text-color);
+}
+.our-team p {
+  color: var(--primary-text-color);
+}
+.our-projects p {
+  color: var(--primary-text-color);
+}
+.feature-title {
+  text-transform: uppercase;
 }
 .link:hover,
-.link:focus {
+.link:focus,
+.link.active {
   color: var(--accent-color);
 }
 .logo-header {
@@ -104,6 +83,9 @@ button {
 }
 .logo-web {
   color: var(--accent-color);
+}
+.footer {
+  background-color: var(--dark-bg-c);
 }
 .logo-footer {
   font-family: 'Raleway';
